<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jokes</string>
    
    <!-- Menu Strings -->
    <string name="menu_main_joke">CS Jokes</string>
    <string name="menu_main_camera">Camera</string>
    <string name="menu_main_list">Joke List</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_joke_new">New Joke</string>
    <string name="menu_joke_punchline">Punchline</string>
    
    <!-- Preference Strings -->
    <string name="pref_key_quote_author">prefKeyQuoteAuthor</string>
    <string name="pref_default_quote_author">Android</string>

    <string name="pref_key_quote_action">prefKeyQuoteAction</string>
    <string name="pref_default_quote_action">18</string>
        <string name="pref_key_quote_message">prefKeyQuoteMessage</string>
    
    
    <string name="pref_default_quote_text">There is nothing as funny as a joke whose full appreciation requires CS knowledge.</string>
    
    <!--  Other Layout Strings -->
    <string name="main_image_description">An amused person.</string>
    <string name="main_camera_cancelled">The picture was cancelled.</string>
    
    <!--  Error Message Strings -->
    <string name="error_db_still_initializing">"The joke collection is still initializing.  Please try again in a minute."</string>
    <string name="error_flash_ram_read_only">"Your picture would be saved because you are not able to write to the external flash memory."</string>
    <string name="error_flash_ram_not_there">"Your picture would be saved because you are not able to read or write to the external flash memory."</string>
    <string name="error_saving_picture">"Your picture could not be saved."</string>
    <string name="error_retrieving_joke">"There was an error getting this joke ;-)."</string>
    
</resources>